refactored, separated code into different files

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,10 +7,10 @@
 
 	<title>Mu-Z-Art</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 
+	<!-- p5 library -->
 	<script src="libraries/p5.js"></script>
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
@@ -52,10 +52,12 @@
 
 
 
-	<script src="./eventHelperFunctions.js"></script>
-	<script src="./canvas.js"></script>
-	<script src="./sound.js"></script>
-	<script src="./explodingParticle.js"></script>
+	<script src="./Path.js"></script>
+	<script src="./Particle.js"></script>
+	<script src="./EventHelperFunctions.js"></script>
+	<script src="./Canvas.js"></script>
+	<script src="./Sound.js"></script>
+	<script src="./ExplodingParticle.js"></script>
 
 
 </body>
