--- a/front-end/index.html
+++ b/front-end/index.html
@@ -25,13 +25,13 @@
 		<h1> mu-z-art </h1>
 
 		<div class="buttons-wrap-div" align="center">
-			<i class="far fa-play-circle fa-3x" id="play-button"></i>
-			<i class="far fa-plus-square fa-3x" id="new-button"></i>
-			<i class="far fa-save fa-3x" id="save-button"></i>
-			<i class="far fa-eye fa-3x" id="show-list-button"></i>
+			<i class="far fa-play-circle fa-2x" id="play-button"></i>
+			<i class="far fa-plus-square fa-2x" id="new-button"></i>
+			<i class="far fa-save fa-2x" id="save-button"></i>
+			<i class="far fa-eye fa-2x" id="show-list-button"></i>
 		</div>
 
-		<div class="saved-drawings-list-wrapper" align="center">
+		<div id="saved-drawings-list-wrapper" align="center">
 			<form id="save-form">
 				<input type="text" id="drawing-title" placeholder="Title">
 				<input type="text" id="drawing-person-name" placeholder="Your Name">
